# uvea

./: .gitignore  Cargo.toml  README.md
examples/: gallery.rs
src/: context.rs  controls.rs  draw.rs  input.rs  layout.rs  lib.rs  pool.rs  stack.rs  style.rs  types.rs  window.rs  winit_event_loop.rs
src/render/: atlas.rs  mod.rs  pipeline.rs  text.rs  vertex.rs
src/render/shaders/: ui.wgsl
