[package]
name = "uvea"
version = "0.1.0"
edition = "2021"

[lib]
name = "uvea"
path = "src/lib.rs"

[[example]]
name = "gallery"
path = "examples/gallery.rs"

[dependencies]
wgpu = "29.0.3"
winit = "0.30"
bytemuck = { version = "1", features = ["derive"] }
rustybuzz = "0.20.1"
unicode-bidi = "0.3"
fontdue = "0.9"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
pollster = "0.4.0"
bitflags = "2"